--- a/Projekt MVC/Views/Shared/_LayoutPusty.cshtml
+++ b/Projekt MVC/Views/Shared/_LayoutPusty.cshtml
@@ -11,8 +11,8 @@
 <body>
     <header style="border-bottom ; box-shadow">
 
-        <form asp-controller="Home" asp-action="Index" method="post">
-            <button type="submit" class="ForumOdnosnik">Forum</button>
+        <form asp-controller="Home" asp-action="Index" method="post" class="nav-link">
+            <button type="submit" class="btn" style="color: white;">Forum</button>
         </form>
 
     </header>
