--- a/Projekt MVC/Views/Rejestracja/Rejestracja.cshtml
+++ b/Projekt MVC/Views/Rejestracja/Rejestracja.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Projekt_MVC.ViewModels.UserRejestracja
 
 @{
-    Layout = "_LayoutPusty";
+    Layout = "_LayoutNieZalogowanyINieWForum";
     ViewData["Title"] = "Rejestracja";
 }
 
