--- a/Projekt MVC/Views/Home/Profil.cshtml
+++ b/Projekt MVC/Views/Home/Profil.cshtml
@@ -5,93 +5,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="~/css/Profil.css">
 
     @* Dodaj link do aktualnie wybranej skórki użytkownika *@
     <link rel="stylesheet" href="@ViewBag.CurrentSkinCssFilePath">
 </head>
 
-
 <body>
-    <div class="containerProfilu">
+    <div class="container">
         <header>
-            <h1 style="text-align: center">Profil użytkownika @ViewBag.Nazwa</h1>
+            <h1 style="color:azure">Profil użytkownika: @ViewBag.Nazwa</h1>
         </header>
 
-        <!-- sekcja dla dyskusji użytkownika -->
-        <section id="dyskusjeUzytkownika" class="sectionProfilu">
-            <h2 style="text-align: center">Twoje dyskusje</h2>
-            <ul>
-                @if (ViewBag.Dyskusje != null)
-                {
-                    foreach (var dyskusja in ViewBag.Dyskusje)
+        <div class="content">
+            <!-- Sekcja dla dyskusji użytkownika -->
+            <section id="dyskusjeUzytkownika" class="section">
+                <h2>Twoje dyskusje</h2>
+                <ul class="discussion-list">
+                    @if (ViewBag.Dyskusje != null)
                     {
-                        <li>
-                            <a href="Dyskusja" class="list-group-item list-group-item-action">
-                                @dyskusja.Temat
-                            </a>
-                        </li>
-                    }
-                }
-                else
-                {
-                    <li>Brak dostępnych dyskusji</li>
-                }
-            </ul>
-        </section>
-
-        <form asp-controller="ProfilUzytkownika" asp-action="ZmienSkorke" method="post">
-            <label for="skorki">Wybierz skórkę:</label>
-            <select name="skorki" id="skorki">
-                @{
-                    var currentSkinId = ViewBag.CurrentSkinId ?? 0; // Jeśli brak, przyjmij domyślną wartość
-                }
-
-                @foreach (var skin in ViewBag.AvailableSkins)
-                {
-                    if (skin.Id == currentSkinId)
-                    {
-                        <option value="@skin.Id" selected>@skin.Nazwa</option>
+                        foreach (var dyskusja in ViewBag.Dyskusje)
+                        {
+                            <li>
+                                <form method="post" asp-action="Dyskusja" asp-controller="Home">
+                                    <input type="hidden" name="id" value="@dyskusja.DyskusjaId">
+                                    <button type="submit" class="discussion-button">@dyskusja.Temat</button>
+                                </form>
+                            </li>
+                        }
                     }
                     else
                     {
-                        <option value="@skin.Id">@skin.Nazwa</option>
+                        <li>Brak dostępnych dyskusji</li>
                     }
-                }
-            </select>
+                </ul>
+            </section>
 
+            <!-- Formularz do zmiany skórki -->
+            <form asp-controller="ProfilUzytkownika" asp-action="ZmienSkorke" method="post" class="form" style="text-align:center">
+                <label for="skorki">Wybierz skórkę:</label>
+                <select name="skorki" id="skorki" class="select">
+                    @{
+                        var currentSkinId = ViewBag.CurrentSkinId ?? 0; // Jeśli brak, przyjmij domyślną wartość
+                    }
 
-            <button type="submit">Zmień skórkę</button>
-        </form>
-
-
-        <section id="informacje" class="sectionProfilu">
-            <h2 style="text-align: center">Zmiana danych</h2>
-            <!-- Formularz do zmiany informacji profilowych -->
-            <form asp-controller="ProfilUzytkownika" asp-action="ZmienDane" method="post" enctype="multipart/form-data" class="formProfilu">
-                <label for="nazwa-uzytkownika" class="labelProfilu">Nazwa użytkownika:</label>
-                <input class="inputProfilu" type="text" id="nazwa-uzytkownika" name="username">
-                <!--h2 style="text-align: center">Zmiana zdjęcia profilowego: </!--h2>
-                <input class="inputProfilu" type="file" id="plik-avataru" name="plik-avataru" accept="image/*" -->
-                <label for="czas-wylogowania" class="labelProfilu">Czas nieaktywności do wylogowania (obecnie <b>@ViewBag.LogoutTime minut</b>)</label>
-                <input class="inputProfilu" type="number" id="czas-wylogowania" name="logoutTime">
-                <button type="submit" class="buttonProfilu">Zapisz zmiany</button>
+                    @foreach (var skin in ViewBag.AvailableSkins)
+                    {
+                        if (skin.Id == currentSkinId)
+                        {
+                            <option value="@skin.Id" selected>@skin.Nazwa</option>
+                        }
+                        else
+                        {
+                            <option value="@skin.Id">@skin.Nazwa</option>
+                        }
+                    }
+                </select>
+                <button type="submit" class="button">Zmień skórkę</button>
             </form>
-        </section>
 
-        <section id="haslo" class="profile-section" style="margin-top: 100px">
-            <h2 style="text-align: center">Zmiana hasła</h2>
-            <!-- Formularz do zmiany hasła -->
-            <form asp-controller="ProfilUzytkownika" asp-action="ZmienHaslo" method="post" enctype="multipart/form-data" class="formProfilu">
-                <label for="aktualne-haslo" class="labelProfilu">Aktualne hasło:</label>
-                <input class="inputProfilu" type="password" id="aktualne-haslo" name="aktualne-haslo" required>
-                <label for="nowe-haslo" class="labelProfilu">Nowe hasło:</label>
-                <input class="inputProfilu" type="password" id="nowe-haslo" name="nowe-haslo" required>
-                <label for="potwierdz-nowe-haslo" class="labelProfilu">Potwierdź nowe hasło:</label>
-                <input class="inputProfilu" type="password" id="potwierdz-nowe-haslo" name="potwierdz-nowe-haslo" required>
-                <button type="submit" class="buttonProfilu">Zmień hasło</button>
-            </form>
-        </section>
+
+            <section id="informacje" class="section">
+                <h2>Zmiana danych</h2>
+                <!-- Formularz do zmiany informacji profilowych -->
+                <form asp-controller="ProfilUzytkownika" asp-action="ZmienDane" method="post" enctype="multipart/form-data" class="form">
+                    <label for="nazwa-uzytkownika">Nazwa użytkownika:</label>
+                    <input type="text" id="nazwa-uzytkownika" name="username" class="input">
+                    <label style="margin-top: 25px" for="czas-wylogowania">Czas nieaktywności do wylogowania: (obecnie <b>@ViewBag.LogoutTime minut</b>)</label>
+                    <input type="number" id="czas-wylogowania" name="logoutTime" class="input">
+                    <button type="submit" class="button">Zapisz zmiany</button>
+                </form>
+            </section>
+
+            <section id="haslo" class="section">
+                <h2>Zmiana hasła</h2>
+                <!-- Formularz do zmiany hasła -->
+                <form asp-controller="ProfilUzytkownika" asp-action="ZmienHaslo" method="post" enctype="multipart/form-data" class="form">
+                    <label for="aktualne-haslo">Aktualne hasło:</label>
+                    <input type="password" id="aktualne-haslo" name="aktualne-haslo" class="input" required>
+                    <label for="nowe-haslo">Nowe hasło:</label>
+                    <input type="password" id="nowe-haslo" name="nowe-haslo" class="input" required>
+                    <label for="potwierdz-nowe-haslo">Potwierdź nowe hasło:</label>
+                    <input type="password" id="potwierdz-nowe-haslo" name="potwierdz-nowe-haslo" class="input" required>
+                    <button type="submit" class="button">Zmień hasło</button>
+                </form>
+            </section>
+        </div>
     </div>
 </body>
 </html>
