--- a/Projekt MVC/wwwroot/css/site.css
+++ b/Projekt MVC/wwwroot/css/site.css
@@ -13,13 +13,16 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    font-size: 16px;
 }
 
 body {
-    font - family: Arial, sans - serif;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
+
+
 
 header {
     background-color: #333;
@@ -67,6 +70,13 @@ header {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+    .login input {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
 
 .loginPrzycisk {
     background-color: #007bff;
