naprawienie dodawania komentarzy

--- a/Projekt MVC/Views/Home/Dyskusja.cshtml
+++ b/Projekt MVC/Views/Home/Dyskusja.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="@ViewBag.CurrentSkinCssFilePath">
-    <link rel="stylesheet" href="dyskusja.css"> <!-- Dodany plik CSS -->
+    <link rel="stylesheet" href="~/css/Dyskusja.css">
 </head>
 <body>
 
