Umożliwienie niezalogowanym przeglądać dyskusje

--- a/Projekt MVC/Views/Home/Forum.cshtml
+++ b/Projekt MVC/Views/Home/Forum.cshtml
@@ -30,7 +30,7 @@
 
     @if (Model == null || !Model.Any())
     {
-        <p>Brak dyskusji na forum</p>
+        <p style="margin-top: 10px ; font-display:fallback ">Brak dyskusji na forum</p>
     }
     else
     {
