moderacja widzi zgłoszone wiadomości tylko ze swojego forum

--- a/Projekt MVC/Views/Home/Wiadomosci.cshtml
+++ b/Projekt MVC/Views/Home/Wiadomosci.cshtml
@@ -20,7 +20,7 @@
         <button type="submit" class="btn btn-outline-secondary">Wyślij Wiadomość</button>
     </form>
 
-    @if (userRole == "admin" && ViewBag.ZgloszoneOdpowiedzi != null)
+    @if (ViewBag.ZgloszoneOdpowiedzi != null)
     {
         <h2>Wiadomości zgłoszone do moderacji:</h2>
 
