Poprawa dark theme

--- a/Projekt MVC/Views/Home/Index.cshtml
+++ b/Projekt MVC/Views/Home/Index.cshtml
@@ -39,11 +39,11 @@
             <table class="forum-table">
                 <thead>
                     <tr>
-                        <th>Nazwa Forum</th>
-                        <th>Opis</th>
-                        <th>Kategoria</th>
-                        <th>Liczba Dyskusji</th>
-                        <th>Liczba Wiadomości</th>
+                        <th style="color: black !important" >Nazwa Forum</th>
+                        <th style="color: black !important">Opis</th>
+                        <th style="color: black !important">Kategoria</th>
+                        <th style="color: black !important">Liczba Dyskusji</th>
+                        <th style="color: black !important">Liczba Wiadomości</th>
                     </tr>
                 </thead>
                 <tbody>
