--- a/Projekt MVC/wwwroot/css/Dyskusja.css
+++ b/Projekt MVC/wwwroot/css/Dyskusja.css
@@ -1,24 +1,38 @@
 ﻿.temat {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 20px;
+}
+
+.dyskusjaContainer {
+    margin-block: 40px;
+    border-style: solid;
+    border-width: 2px;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .opis {
-    margin-left: 300px;
-    margin-right: 300px;
-    margin-top: 100px;
+    width: min-content;
+    margin-right: auto;
+    /* margin-block: 30px; */
+    margin-inline: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .odpowiedzi {
     list-style: none;
     padding: 0;
+    border-radius: 5px;
 }
 
-    .odpowiedzi li {
-        margin-bottom: 20px;
-        border: 1px solid #ccc;
-        padding: 10px;
-    }
+.odpowiedzi li {
+    margin-bottom: 20px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;  
+}
 
 .autor {
     font-weight: bold;
@@ -26,18 +40,19 @@
 
 .tresc {
     margin-top: 5px;
+    border-radius: 5px;
 }
 
 .odpowiedz-form {
     margin-top: 20px;
 }
 
-    .odpowiedz-form textarea {
-        width: 100%;
-        height: 100px;
-        resize: vertical;
-        margin-bottom: 10px;
-    }
+.odpowiedz-form textarea {
+    width: 100%;
+    height: 100px;
+    resize: vertical;
+    margin-block: 20px;
+}
 
 .odpowiedz-btn {
     background-color: #007bff;
