--- a/Projekt MVC/wwwroot/css/site.css
+++ b/Projekt MVC/wwwroot/css/site.css
@@ -56,6 +56,7 @@ header {
     background-color: #f5f5f5;
     padding: 20px;
     text-align: center;
+    margin-inline: auto;
 }
 
 .loginForma {
